--- a/package.json
+++ b/package.json
@@ -12,27 +12,28 @@
   "dependencies": {
     "@heroui/react": "2.8.6",
     "@iconify/react": "latest",
+    "@tailwindcss/postcss": "4.1.11",
+    "@tailwindcss/vite": "4.1.11",
+    "firebase": "^12.7.0",
     "framer-motion": "^11.18.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "5.3.4",
-    "@tailwindcss/postcss": "4.1.11",
-    "@tailwindcss/vite": "4.1.11",
     "source-map-js": "^1.2.1"
   },
   "devDependencies": {
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react": "^4.3.4",
-    "postcss": "8.5.6",
-    "typescript": "5.7.3",
-    "vite": "^6.0.11",
     "@babel/core": "^7.26.10",
     "@babel/generator": "^7.27.0",
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.27.0",
     "@babel/traverse": "^7.27.0",
     "@babel/types": "^7.27.0",
-    "tailwindcss": "4.1.11"
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "@vitejs/plugin-react": "^4.3.4",
+    "postcss": "8.5.6",
+    "tailwindcss": "4.1.11",
+    "typescript": "5.7.3",
+    "vite": "^6.0.11"
   }
 }
